Added peer and server header files to makefile

--- a/Project 1/makefile
+++ b/Project 1/makefile
@@ -4,12 +4,12 @@ make : bbserver.o bbpeer.o
 
 bbserver : bbserver.o
 	gcc -pthread -o bbserver bbserver.o
-bbserver.o : bbserver.c headerFiles.h
+bbserver.o : bbserver.c bbserver.h headerFiles.h
 	gcc -c -g -Wall bbserver.c
 
 bbpeer : bbpeer.o
 	gcc -pthread -o bbpeer bbpeer.o
-bbpeer.o : bbpeer.c headerFiles.h
+bbpeer.o : bbpeer.c bbpeer.h headerFiles.h
 	gcc -c -g -Wall bbpeer.c
 
 clean :
